--- a/deployment/kustomization.yml
+++ b/deployment/kustomization.yml
@@ -1,3 +1,5 @@
+resources:
+  - frontend/deploy.yml
 images:
   - name: 654654554686.dkr.ecr.us-west-1.amazonaws.com/react-frontend-docker
     newName: 654654554686.dkr.ecr.us-west-1.amazonaws.com/react-frontend-docker
